kyy-k8s-config/dev/app/backend/go-api/go-api-deployment.yaml
±apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-api
  name: go-api
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: go-api
    spec:
      imagePullSecrets:
        - name: beijing
      containers:
        - args:
            - --registry_address=consul-server-bootstrap:8500
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/api-web:dev
          name: go-api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
