kyy-k8s-config/dev/app/backend/go-api/go-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: go-api
  name: go-api
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "zckjpx.kuaixuezaixian.com,caishidian.kuaixuezaixian.com"
spec:
  rules:
    - host: "www.kuaixuezaixian.com"
      http:
        paths:
          - backend:
              serviceName: go-api
              servicePort: 80
            path: /api/v1/
